Fix column wrapping

--- a/styles/gamesList.css
+++ b/styles/gamesList.css
@@ -14,7 +14,7 @@
 .gamesList {
 	margin-top: 10px;
 	display: flex;
-	flex-flow: row nowrap;
+	flex-flow: row wrap;
 	justify-content: flex-start;
 	gap: 10px;
 
@@ -64,7 +64,7 @@
 
 /* list view */
 [data-displaymode=list] .gamesList {
-	flex-direction: column;
+	flex-flow: column nowrap;
 }
 [data-displaymode=list] .gamesList .listGame {
 	grid-template-columns: 25% minmax(0, 1fr) max-content;
